test/fail/template_for_each_not_list.cpp
#include <stdx/type_traits.hpp>

// EXPECT: must be called with a type list

auto main() -> int {
    stdx::template_for_each<int>([] {});
}
